syntax = "proto3";

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "RSoft.Entry.Grpc.Protobuf";

// common message types
// ------------------------------------------------------------------

message SimpleIdName {
	string id = 1;
	string name = 2;
}
message NullableSimpleIdName {
oneof kind {
    google.protobuf.NullValue null = 1;
    SimpleIdName data = 2;
  }
}
message AuthorDetail {
	string id = 1;
	string name = 2;
}
message PeriodDate {
	NullableTimestamp start_at = 1;
	NullableTimestamp end_at = 2;
}
message PeriodeYearMonth {
	int32 year = 1;
	int32 month = 2;
}

message NullableTimestamp {
  oneof kind {
    google.protobuf.NullValue null = 1;
    google.protobuf.Timestamp data = 2;
  }
}
message NullableAuthorDetail {
  oneof kind {
    google.protobuf.NullValue null = 1;
    AuthorDetail data = 2;
  }
}
message NullablePeriodDate {
  oneof kind {
    google.protobuf.NullValue null = 1;
    PeriodDate data = 2;
  }
}
message NullablePeriodeYearMonth {
  oneof kind {
    google.protobuf.NullValue null = 1;
    PeriodeYearMonth data = 2;
  }
}

// category service definitions
// ------------------------------------------------------------------

service Category {
	rpc CreateCategory (CreateCategoryRequest) returns (CreateCategoryReply);
	rpc UpdateCategory (UpdateCategoryRequest) returns (google.protobuf.Empty);
	rpc EnableCategory (EnableCategoryRequest) returns (google.protobuf.Empty);
	rpc DisableCategory (DisableCategoryRequest) returns (google.protobuf.Empty);
	rpc GetCategory (GetCategoryRequest) returns (CategoryDetail);
	rpc ListCategory (google.protobuf.Empty) returns (ListCategoryReply);
}

// category message contracts
// ------------------------------------------------------------------

message CategoryDetail {
	string id = 1;
	string name = 2;
	bool is_active = 3;
	google.protobuf.Timestamp created_on = 4;
	AuthorDetail created_by = 5;
	NullableTimestamp changed_on = 6;
	NullableAuthorDetail changed_by = 7;
}

message CreateCategoryRequest {
	string name = 1;
}
message CreateCategoryReply {
	string id = 1;
}

message UpdateCategoryRequest {
	string id = 1;
	string name = 2;
}

message EnableCategoryRequest {
	string id = 1;
}

message DisableCategoryRequest {
	string id = 1;
}

message GetCategoryRequest {
	string id = 1;
}

message ListCategoryReply {
	repeated CategoryDetail data = 1;
}

// entry service definitions
// ------------------------------------------------------------------

service Entry {
	rpc CreateEntry (CreateEntryRequest) returns (CreateEntryReply);
	rpc UpdateEntry (UpdateEntryRequest) returns (google.protobuf.Empty);
	rpc EnableEntry (ChangeStatusEntryRequest) returns (google.protobuf.Empty);
	rpc DisableEntry (ChangeStatusEntryRequest) returns (google.protobuf.Empty);
	rpc GetEntry (GetEntryRequest) returns (EntryDetail);
	rpc ListEntry (google.protobuf.Empty) returns (ListEntryReply);
}

// Entry message contracts
// ------------------------------------------------------------------

message EntryDetail {
	string id = 1;
	string name = 2;
	NullableSimpleIdName category = 3;
	bool is_active = 4;
	google.protobuf.Timestamp created_on = 5;
	AuthorDetail created_by = 6;
	NullableTimestamp changed_on = 7;
	NullableAuthorDetail changed_by = 8;
}

message CreateEntryRequest {
	string name = 1;
	string category_id = 2;
}
message CreateEntryReply {
	string id = 1;
}

message UpdateEntryRequest {
	string id = 1;
	string name = 2;
	string category_id = 3;
}
message UpdateEntryReply {
}

message ChangeStatusEntryRequest {
	string id = 1;
}

message GetEntryRequest {
	string id = 1;
}

message ListEntryReply {
	repeated EntryDetail data = 1;
}

// payment method service definitions
// ------------------------------------------------------------------

service PaymentMethod {
	rpc CreatePaymentMethod (CreatePaymentMethodRequest) returns (CreatePaymentMethodReply);
	rpc UpdatePaymentMethod (UpdatePaymentMethodRequest) returns (google.protobuf.Empty);
	rpc EnablePaymentMethod (ChangeStatusPaymentMethodRequest) returns (google.protobuf.Empty);
	rpc DisablePaymentMethod (ChangeStatusPaymentMethodRequest) returns (google.protobuf.Empty);
	rpc GetPaymentMethod (GetPaymentMethodRequest) returns (GetPaymentMethodReply);
	rpc ListPaymentMethod (google.protobuf.Empty) returns (ListPaymentMethodReply);
}

// payment method message contracts
// ------------------------------------------------------------------

message PaymentMethodDetail {
	string id = 1;
	string name = 2;
	SimpleIdName payment_type = 3;
	bool is_active = 4;
	google.protobuf.Timestamp created_on = 5;
	AuthorDetail created_by = 6;
	NullableTimestamp changed_on = 7;
	NullableAuthorDetail changed_by = 8;
}

message CreatePaymentMethodRequest {
	string name = 1;
	int32 payment_type = 2;
}
message CreatePaymentMethodReply {
	string id = 1;
}

message UpdatePaymentMethodRequest {
	string id = 1;
	string name = 2;
	int32 payment_type = 3;
}
message UpdatePaymentMethodReply {
}

message ChangeStatusPaymentMethodRequest {
	string id = 1;
}

message GetPaymentMethodRequest {
	string id = 1;
}
message GetPaymentMethodReply {
	PaymentMethodDetail data = 1;
}

message ListPaymentMethodReply {
	repeated PaymentMethodDetail data = 1;
}

// accrual period service definitions
// ------------------------------------------------------------------
service AccrualPeriod {
	rpc StartPeriod (PeriodRequest) returns (google.protobuf.Empty);
	rpc ClosePeriod (PeriodRequest) returns (google.protobuf.Empty);
	rpc ListPeriod (google.protobuf.Empty) returns (ListPeriodReply);
}

// accrual period message contracts
// ------------------------------------------------------------------
message PeriodRequest {
	int32 year = 1;
	int32 month = 2;
}
message AccrualPeriodDetail {
	int32 year = 1;
	int32 month = 2;
	float opening_balance = 3;
	float total_credits = 4;
	float total_debts = 5;
	float accrual_period_balance = 6;
	float closing_balance = 7;
	bool is_closed = 8;
	NullableAuthorDetail closed_author = 9;
	google.protobuf.Timestamp created_on = 10;
	AuthorDetail created_by = 11;
	NullableTimestamp changed_on = 12;
	NullableAuthorDetail changed_by = 13;
}
message ListPeriodReply {
	repeated AccrualPeriodDetail data = 1;
}

// transaction service definitions
// ------------------------------------------------------------------

service Transaction {
	rpc CreateTransaction (CreateTransactionRequest) returns (CreateTransactionReply);
	rpc RollbackTransaction (RollbackTransactionRequest) returns (RollbackTransactionReply);
	rpc GetTransaction (GetTransactionRequest) returns (TransactionDetail);
	rpc ListTransaction (ListTransactionRequest) returns (ListTransactionReply);
}

// transaction message contracts
// ------------------------------------------------------------------

message TransactionDetail {
	string id = 1;
	int32 year = 2;
	int32 month = 3;
	google.protobuf.Timestamp date = 4;
	SimpleIdName transaction_type = 5;
	double amount = 6;
	string comment = 7;
	SimpleIdName entry_id = 8;
	SimpleIdName payment_method_id = 9;
	AuthorDetail transaction_author = 10;
}

message CreateTransactionRequest {
	google.protobuf.Timestamp date = 1;
	int32 transaction_type = 2;
	double amount = 3;
	string comment = 4;
	string entry_id = 5;
	string payment_method_id = 6;
}
message CreateTransactionReply {
	string id = 1;
}

message RollbackTransactionRequest {
	string id = 1;
	string comment = 2;
}
message RollbackTransactionReply {
	string id = 1;
}

message GetTransactionRequest {
	string id = 1;
}

message ListTransactionRequest {
	NullablePeriodDate period_date = 1;
	NullablePeriodeYearMonth period_year_month = 2;
	string entry_id = 3;
	google.protobuf.Int32Value transaction_type = 4;
	string payment_method_id = 5;
}
message ListTransactionReply {
	repeated TransactionDetail data = 1;
}